launch.json cleanup & package update

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Framework test",
+            "name": "ORM-SQLITE test",
             "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
             "args": [
                 "-r",
@@ -15,6 +15,6 @@
                 "${workspaceFolder}/test/**/*.ts",
             ],
             "protocol": "inspector"
-        },
+        }
     ]
 }
