--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
     "@types/lodash": "^4.14.136",
+    "@types/sinon": "^7.5.1",
     "@types/sqlite3": "^3.1.5",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "prettier": "^1.18.2",
+    "sinon": "^8.1.1",
     "ts-mocha": "^6.0.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.20.1",
